@@ -577,6 +577,7 @@ begin
     end;
   end;
   {$IFDEF OPSISCRIPT}
+  //LogDatei.FWriteHistFile:=true;
   Logdatei.log('opsi-script ' + OpsiscriptVersion + ' started at >>' + starttimestr,
     LLessential);
   Logdatei.log('opsi-script log file with encoding ' + DefaultEncoding, LLessential);
