@@ -2063,6 +2063,7 @@ begin
             LogDateiName := OpsiData.getLogFileName(LogDateiName);
             startupmessages.Append('startmessage create log: ' + DateTimeToStr(Now));
             LogDatei.CreateTheLogfile(LogDateiName);
+            LogDatei.WriteHistFile:=true;
           end;
           LogDatei.force_min_loglevel:=osconf.force_min_loglevel;
           LogDatei.debug_prog:=osconf.debug_prog;
