@@ -5,6 +5,12 @@ mac getIpByName liefert name von IPnum
 
 
 ##################################################################
+opsi-winst/opsi-script (4.12.3.10) experimental; urgency=low
+
+  * activate history logging again
+
+-- Detlef Oertel <d.oertel@uib.de>  Tue, 03 Feb 2020:15:00:00 +0200
+
 opsi-winst/opsi-script (4.12.3.9) experimental; urgency=low
 
   * winbatch combine /timeoutseconds with WaitForWindowAppearing or WaitForWindowVanished
